--- a/apps/toolbox/src/nav/Nav.module.scss
+++ b/apps/toolbox/src/nav/Nav.module.scss
@@ -3,12 +3,20 @@
     flex-direction: row;
     gap: 15px;
     padding: 15px;
-    background-color: #333;
+    background-color: #222;
     margin: 0;
     list-style: none;
     align-items: center;
 }
 
-.activeLinkItem {
+.linkItem {
+    color: #999;
+
+    &_active {
+        color: #fff;
+    }
+}
+
+.useLinuxWorkaroundLabel {
     color: #fff;
 }
